Update Trino Connector